# HoloLens-BIM

./: README.md
Mesh/Assets/Scene/: app.unity
Mesh/Assets/Scripts/: MeshAnalyzer.cs
Mesh/ProjectSettings/: ProjectSettings.asset
Model/: 107.blend
PCL/: CMakeLists.txt  plane_detection.cpp
Room-Box/: .gitignore
Room-Box/Assets/: App.unity  Fog.prefab  LineRenderer.prefab  MeshAnalyzer.cs  MiniMap.cs  MiniMapMaterial.mat  MiniMapShader.shader  RoomBox.cs  ScanManager.cs  ScanProgress.cs  fogmaterial.mat
Room-Box/Assets/Materials/: SeeThroughMaterial.mat  SeeThroughShader.shader
Room-Box/Assets/Model/: 107.blend
Room-Box/Assets/Models/: 101.blend  102.blend  106.blend  107.blend  107clean.prefab  hallway.blend
Room-Box/Assets/Models/Materials/: Glass.mat
Room-Box/Assets/Scripts/: MeshAnalyzer.cs  MiniMap.cs  PriorityQueue.cs  RoomIdentifier.cs  ScanManager.cs  ScanProgress.cs  VirtualRoomBehavior.cs
Room-Box/Assets/Scripts/Graph/: Graph.cs  Node.cs
Room-Box/Assets/Scripts/Utils/: MathUtils.cs  VectorUtils.cs
Room-Box/Assets/StarEffect/: Star_03.mat  Star_03.prefab
Room-Box/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Scanner/Assets/: IntuitiveCamera.cs  ScanManager.cs  Scanner.unity  SpatialUnderstandingController.cs
Scanner/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
